# hermes-subagent-output-guide

./: .gitignore  .vulture_whitelist.py  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  justfile  plugin.yaml  pyproject.toml
.github/: renovate.json
.github/workflows/: verify.yml
tests/: conftest.py  helpers.py  test_guidance.py  test_registration.py  test_tracker.py
