[project]
name = "subagent-output-guide"
version = "0.1.0"
description = "Injects output-location guidance into subagent prompts"
authors = [{ name = "XLion / 玖璃" }]
requires-python = ">=3.12"
dependencies = []
dynamic = []
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/subagent_output_guide"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "I",    # isort
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "PL",   # pylint
    "RUF",  # ruff-specific
]
ignore = [
    "N999",   # Plugin dir names use hyphens (e.g. subagent-output-guide)
    "PLR2004", # Magic-value comparison fine in test assertions
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0",
    "ty>=0.0.49",
]
