[project]
name = "subagent-output-guide"
version = "0.1.0"
description = "Injects output-location guidance into subagent prompts"
authors = [{ name = "XLion / Kuri" }]
requires-python = ">=3.12"
dependencies = []
dynamic = []
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "I",    # isort
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "PL",   # pylint
    "RUF",  # ruff-specific
]
ignore = [
    "N999",   # Plugin dir names use hyphens (e.g. subagent-output-guide)
    "PLR2004", # Magic-value comparison fine in test assertions
]
exclude = [".vulture_whitelist.py", ".venv", "dist", "__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0",
    "ty>=0.0.49",
    "bandit>=1.7",
    "vulture>=2.7",
]

[tool.bandit]
targets = ["__init__.py", "tests/"]
skips = ["B101"]  # allow assert — used pervasively in tests
