[project]
name = "hermes-subagent-output-guide"
version = "0.1.0"
description = "Injects output-location guidance into subagent prompts"
requires-python = ">=3.11, <3.12"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "I",    # isort
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "PL",   # pylint
    "RUF",  # ruff-specific
]
ignore = [
    "N999",   # Plugin dir names use hyphens (e.g. subagent-output-guide)
    "PLR2004", # Magic-value comparison fine in test assertions
]
exclude = [".vulture_whitelist.py", ".venv", "dist", "__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "ruff==0.15.20",
    "pytest==9.1.1",
    "ty==0.0.53",
    "bandit==1.9.4",
    "vulture==2.16",
]

[tool.bandit]
targets = ["__init__.py", "tests/"]
skips = ["B101"]  # allow assert — used pervasively in tests
